<resources>
    <string name="app_name">Recipe App</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_level_int">Difficulty Level (%d)</string>
    <string name="steps">Steps</string>
    <string name="steps_no">Steps (%d)</string>
    <string name="recipe_types">Recipe Types</string>
    <string name="select_recipe_types">Select Recipe Types</string>
    <string name="select_recipe_types_no">Select Recipe Types (%d)</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_no">Ingredients (%d)</string>
    <string name="input_cannot_be_empty">%s cannot be empty</string>
    <string name="copied_to_clipboard">Copied %s to clipboard.</string>
    <string name="upload">Upload</string>
    <string name="select_image">Select Image</string>
    <string name="new_recipe_added">New Recipe Added!</string>
    <string name="difficulty_level">Difficulty level: %d</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="recipe_edited">Recipe edited!</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="delete_recipe_confirmation_msg">Are you sure you want to delete this recipe?</string>
    <string name="filter">Filter</string>
    <string name="loading">Loading...</string>
    <string name="select_recipe_type_error">Must select at least 1 Recipe Type</string>
    <string name="specify_recipe_step_error">Must have at least 1 Step</string>
    <string name="specify_recipe_ingredient_error">Must have at least 1 Ingredient</string>
    <string name="upload_recipe_image_error">Must upload Image</string>
    <string name="no_data_to_show">No data to show</string>
</resources>