<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:background="#ffffff"
                android:divider="@android:color/black"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="240dp">

                    <com.github.chrisbanes.photoview.PhotoView
                        android:id="@+id/iv_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/image_bg"
                        android:src="@drawable/ic_baseline_image_search_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="6dp"
                        android:text="@string/upload"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NewRecipeInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/recipe_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_recipe_name"
                    style="@style/NewRecipeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ex: Carbonara"
                    android:inputType="textCapSentences" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/NewRecipeInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/recipe_description" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_recipe_desc"
                    style="@style/NewRecipeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ex: A dish consist of egg yolk and spaghetti"
                    android:inputType="textCapSentences" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_difficulty_level"
                    style="@style/NewRecipeInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/difficulty_level_int" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_recipe_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-3dp"
                    android:layout_marginEnd="-3dp"
                    android:stepSize="1.0"
                    android:valueFrom="1.0"
                    android:valueTo="10.0" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_ingredient"
                    style="@style/NewRecipeInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/ingredients" />

                <HorizontalScrollView
                    android:id="@+id/hsv_ingredient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_ingredient"
                        style="@style/Widget.MaterialComponents.Chip.Entry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:animateLayoutChanges="true"
                        app:singleLine="true">

                    </com.google.android.material.chip.ChipGroup>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="6dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        app:hintEnabled="false">

                        <AutoCompleteTextView
                            android:id="@+id/actv_ingredient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-8dp"
                            android:layout_marginBottom="-12dp"
                            android:background="@android:color/transparent"
                            android:hint="Ex: Potato"
                            android:imeOptions="actionDone"
                            android:inputType="textCapWords"
                            android:padding="0dp"
                            android:singleLine="true"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp"
                            android:background="@android:color/darker_gray" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_add_ingredient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:text="@string/add"
                        app:cornerRadius="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_step" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_steps"
                        style="@style/NewRecipeInputTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/steps" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:alpha="0.5"
                        android:animateLayoutChanges="true"
                        android:background="?selectableItemBackground"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="8dp"
                        android:text="@string/edit"
                        android:textAllCaps="true"
                        android:textColor="@color/colorSecondary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_step" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_select_recipe_type"
                    style="@style/NewRecipeInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/select_recipe_types" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_recipe_type"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:selectionRequired="true"
                    app:singleLine="false"
                    app:singleSelection="false">

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_delete_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:gravity="center"
                    android:text="@string/delete_recipe"
                    android:visibility="gone"
                    app:cornerRadius="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_step"
                    tools:visibility="visible" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/ll_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5C606060"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.Wave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/colorSecondary" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>